XMLファイル作成完了
画面のレイアウトとなるXMLファイルの作成完了

--- a/res/layout/activity_lottery_entry.xml
+++ b/res/layout/activity_lottery_entry.xml
@@ -38,12 +38,12 @@
 
             <TextView
                 style="@style/text"
-                android:text="@string/lottery_Quantity" />
+                android:text="@string/lottery_quantity" />
             
             <LinearLayout
                 style="@style/frame_border" >
                <TextView
-                   android:id="@+id/lottery_Quantity"
+                   android:id="@+id/lottery_quantity"
                    android:background="#ffffffff"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
