--- a/res/layout/activity_lottery_confirm.xml
+++ b/res/layout/activity_lottery_confirm.xml
@@ -2,15 +2,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jp.matsuda.lottery.LotteryEntryActivity" >
+    android:padding="@dimen/activity_margin" >
 
     <TextView
+        android:id="@+id/aboveScrollView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        style="@style/text"
+        android:layout_alignParentTop="true"
+        android:text="@string/confirm_text1" />
+
+    <ScrollView
+        style="@style/scroll_view">
+
+        <LinearLayout
+            android:id="@+id/lotteryItemView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/belowScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+
+        <TextView
+            style="@style/border"
+            android:layout_width="match_parent" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                style="@style/text"
+                android:text="@string/lottery_quantity" />
+            
+            <TextView
+                android:id="@+id/lotteryQuantityView"
+                style="@style/text" />
+            
+        </LinearLayout>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal" >
+            
+            <Button
+                android:id="@+id/OKButton"
+                style="@style/below_button"
+                android:text="@string/confirm_button1" />
+            
+            <Button
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/confirm_button2" />
+            
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
