--- a/res/layout/activity_lottery_result.xml
+++ b/res/layout/activity_lottery_result.xml
@@ -2,15 +2,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jp.matsuda.lottery.LotteryEntryActivity" >
+    android:padding="@dimen/activity_margin" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/aboveScrollView"
+        style="@style/text"
+        android:layout_alignParentTop="true"
+        android:text="@string/result_text1" />
+
+    <ScrollView style="@style/scroll_view" >
+
+        <LinearLayout
+            android:id="@+id/winnersView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/belowScrollView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <TextView
+                style="@style/text"
+                android:layout_weight="1" />
+            
+            <TextView
+                style="@style/text"
+                android:text="@string/result_text2" />
+        </LinearLayout>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+            
+            <Button
+                android:id="@+id/appRestertButton"
+                style="@style/below_button"
+                android:text="@string/result_button1" />
+            
+            <Button
+                android:id="@+id/appEndButton"
+                style="@style/below_button"
+                android:text="@string/result_button2" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
