--- a/res/layout/activity_now_lottery.xml
+++ b/res/layout/activity_now_lottery.xml
@@ -2,15 +2,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jp.matsuda.lottery.LotteryEntryActivity" >
+    android:padding="@dimen/activity_margin" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout 
+        android:id="@+id/aboveScrollView"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="vertical" >
+
+        <TextView 
+           style="@style/text"
+           android:text="@string/lottery_text1" />
+           
+            <TextView
+                android:id="@+id/lotteryView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:padding="20dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#ffffffff"
+                android:text="松田翔平" />
+        
+        <TextView
+            style="@style/text"
+            android:text="@string/lottery_text2" />
+        
+    </LinearLayout>
+    
+    <ScrollView
+        style="@style/scroll_view" >
+        <LinearLayout
+            android:id="@+id/winnersView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal" >
+            
+        </LinearLayout>
+    </ScrollView>
+    
+    <LinearLayout
+        android:id="@+id/belowScrollView"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+        
+        <Button
+            android:id="@+id/nextButton"
+            style="@style/below_button"
+            android:text="@string/lottery_button" />
+    </LinearLayout>
 
 </RelativeLayout>
