activity_lottery_result.xml修正
「終了ボタン」を削除した。
アプリの処理でアプリを終了させることは推奨されていなかったため。
それに伴い、不要になった文字列を「strings.xml」から削除した。
また、「strings.xml」はその他の修正も加えている。

--- a/res/layout/activity_lottery_result.xml
+++ b/res/layout/activity_lottery_result.xml
@@ -50,14 +50,11 @@
             android:orientation="horizontal" >
             
             <Button
-                android:id="@+id/appRestertButton"
+                android:id="@+id/appRestartButton"
                 style="@style/below_button"
-                android:text="@string/result_button1" />
+                android:text="@string/result_button" />
             
-            <Button
-                android:id="@+id/appEndButton"
-                style="@style/below_button"
-                android:text="@string/result_button2" />
+
         </LinearLayout>
     </LinearLayout>
 
