--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -21,7 +21,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="border">
@@ -42,12 +42,14 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_above">@+id/belowScrollView</item>
         <item name="android:layout_below">@+id/aboveScrollView</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        
     </style>
 
     <style name="below_button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
